# async-researcher

./: .gitignore  .npmrc  AGENTS.md  ArchitectureSpecification.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  LocalAgenticRAGArch.md  Makefile  README.md  ROADMAP.md  config.toml.example  data.json  esbuild.config.mjs  local-web-scraping-and-aggregating.md  main.js  manifest.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  styles.css  tsconfig.json  versions.json
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
apps/orchestrator/: pyproject.toml
apps/orchestrator/src/orchestrator/: __init__.py  config.py  main.py  prompts.py  setup_wizard.py
apps/orchestrator/src/orchestrator/flows/: graph.py  research_flow.py  roma.py  surface_flow.py
apps/orchestrator/src/orchestrator/routes/: health.py  research.py  surface.py
apps/orchestrator/tests/: test_config.py  test_research_flow.py  test_research_route.py  test_roma_aggregator.py  test_roma_atomizer.py  test_roma_executor.py  test_roma_flow.py  test_roma_planner.py  test_roma_schemas.py  test_surface.py
docs/: 00_VISION.md  01_MVP_SCOPE.md  02_COMPONENT_MAP.md  03_ROADMAP.md  04_PROJECT_STRUCTURE.md  05_DECISIONS.md  v0.2.2_ROMA_PLAN.md  v0.2.3_MEM0_PLAN.md
eval/harness/: pyproject.toml
eval/harness/datasets/: retrieval.alphero.live.jsonl  retrieval.sample.jsonl
eval/harness/src/eval/: __init__.py  metrics.py  reports.py  runner.py
eval/harness/tests/: test_metrics.py  test_runner.py
infra/dev/: .env.example  docker-compose.yml
obsidian-plugin/: data.json  manifest.json  package.json  styles.css  tsconfig.json
obsidian-plugin/src/: main.ts  settings.ts  setup.ts
obsidian-plugin/src/api/: index.ts
obsidian-plugin/src/research/: index.ts  sidebar.ts
obsidian-plugin/src/surfacing/: index.ts
sidecar/: .env.example  deep_research.py  deep_research_stub.py  setup-open-deep-research.sh
src/: main.ts
src/app/: layout.tsx  page.tsx
src/components/kanban/: add-ticket-dialog.tsx  board.tsx  column.tsx  ticket-card.tsx  ticket-detail-dialog.tsx
src/hooks/: use-kanban.ts
src/llm/: index.ts  ollama.ts  openai-compat.ts
src/types/: index.ts
