[project]
name = "orchestrator"
version = "0.0.0"
description = "FastAPI backend — proactive surfacing + deep research."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "langgraph>=0.2.50",
    "ingestion",
    "retrieval",
    "citation",
    "inference",
    "memory",
    "web",
]

[project.scripts]
orchestrator-dev = "orchestrator.main:dev"
orchestrator-ingest = "orchestrator.main:ingest_cli"
orchestrator-query = "orchestrator.main:query_cli"
orchestrator-research = "orchestrator.main:research_cli"

[tool.uv.sources]
ingestion = { workspace = true }
retrieval = { workspace = true }
citation = { workspace = true }
inference = { workspace = true }
memory = { workspace = true }
web = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]
